--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scp-json-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://aspectss.github.io/scp-app",
   "dependencies": {
     "@testing-library/jest-dom": "^6.1.1",
     "@testing-library/react": "^14.0.0",
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.0.0"
   }
 }
